--- a/style.css
+++ b/style.css
@@ -1,17 +1,17 @@
 *{
-    padding: 0;
     margin: 0;
     font-family: 'Inter', sans-serif;
+    box-sizing: border-box;
 }
 :root{
-    box-sizing: border-box;
     font-size: 18px;
     --headerHeight: 60px;
+    --titleContainerHeight: 14vh;
     --textColorBlack: #282828;
 }
 
 body{
-    overflow: hidden;
+    /* overflow: hidden; */
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,8 +21,10 @@ body{
 
 .title-container{
     display: flex;
-    height: 14vh;
+    /* height: var(--titleContainerHeight); */
+    flex: 1;
     align-items: end;
+    /* border: 2px solid green; */
 }
 .title-container div{
     flex: 1;
@@ -54,9 +56,11 @@ body{
 }
 
 .content{
-    /* border: 1px solid red; */
+    /* border: 1px solid rgb(13, 136, 91); */
     height: calc(100vh - var(--headerHeight) * 2);
     width: 70vw;
+    display: flex;
+    flex-direction: column;
 }
 
 header{
@@ -85,7 +89,8 @@ footer{
 }
 
 .library-container{
-    /* border: 2px solid blue; */
+    flex: 4;
+    /* overflow: scroll; */
 }
 
 .empty-message-container{
@@ -120,6 +125,10 @@ footer{
 
 .font-size-regular{
     font-size: 0.9rem;
+    font-weight: 400;
+}
+.font-size-small{
+    font-size: 0.8rem;
     font-weight: 400;
 }
 
@@ -162,4 +171,58 @@ footer{
 
 .medium-bold {
     font-weight: 500;
+}
+.bold {
+    font-weight: 700;
+}
+.faded{
+    color: #636363;
+}
+
+.hidden{
+    display: none;
+}
+
+.grid-container{
+    margin-top: 64px;
+    /* border: 1px solid red; */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-auto-rows: min-content;
+    gap: 32px;
+    /* justify-items: center; */
+}
+
+.card{
+    border: 2.5px solid rgb(82, 71, 203);
+    width: 100%;
+    height: min-content;
+    justify-self: center;
+    align-self: center;
+    padding: 18px 20px;
+    border-radius: 18px;
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.22);
+}
+.card:hover{
+    scale: 101%;
+    cursor: pointer;
+}
+
+.card div:nth-child(2){
+    margin-top: -6px;
+    margin-bottom: 20px;
+}
+
+.card>div:last-child{
+    align-self: self-end;
+}
+
+.card>div:first-child{
+    display: flex;
+}
+
+.check-mark{
+    margin-left: auto;
 }
