--- a/style.css
+++ b/style.css
@@ -90,7 +90,7 @@ footer{
 
 .library-container{
     flex: 4;
-    /* overflow: scroll; */
+    overflow: scroll;
 }
 
 .empty-message-container{
@@ -190,12 +190,13 @@ footer{
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-auto-rows: min-content;
     gap: 32px;
-    /* justify-items: center; */
+    justify-items: center;
 }
 
 .card{
-    border: 2.5px solid rgb(82, 71, 203);
+    border: 2.5px solid #7AA4CB;
     width: 100%;
+    max-width: 350px;
     height: min-content;
     justify-self: center;
     align-self: center;
@@ -218,6 +219,9 @@ footer{
 .card>div:last-child{
     align-self: self-end;
 }
+.card>div:last-child:hover{
+    color:rgb(208, 99, 99);
+}
 
 .card>div:first-child{
     display: flex;
@@ -225,4 +229,15 @@ footer{
 
 .check-mark{
     margin-left: auto;
+}
+
+.mark-as-read{
+    position: absolute;
+    width: max-content;
+    height: max-content;
+    background-color: rgb(255, 255, 255);
+    z-index: 10;
+    border-radius: 8px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.226);
+    padding: 6px;
 }
