--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 }
 
 body{
-    /* overflow: hidden; */
+    overflow: hidden;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -206,10 +206,11 @@ footer{
     flex-direction: column;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.22);
 }
-.card:hover{
+
+/* .card:hover{
     scale: 101%;
     cursor: pointer;
-}
+} */
 
 .card div:nth-child(2){
     margin-top: -6px;
@@ -221,6 +222,7 @@ footer{
 }
 .card>div:last-child:hover{
     color:rgb(208, 99, 99);
+    cursor: pointer;
 }
 
 .card>div:first-child{
@@ -229,6 +231,7 @@ footer{
 
 .check-mark{
     margin-left: auto;
+    cursor: pointer;
 }
 
 .mark-as-read{
@@ -240,4 +243,85 @@ footer{
     border-radius: 8px;
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.226);
     padding: 6px;
+    visibility: hidden;
+}
+
+.modal{
+    position: absolute;
+    top: 27%;
+    left: calc(50% - 175px);
+    width: 350px;
+    background-color: white;
+    border-radius: 18px;
+    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    display: flex;
+    flex-direction: column;
+    padding: 28px;
+    /* gap: 18px; */
+}
+
+.modal>input{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 0.5px solid rgb(47, 47, 47);
+    height: 32px;
+    margin-bottom: 32px;
+    font-size: 0.9rem;
+}
+
+.modal>input:focus{
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 0.5px solid rgb(47, 47, 47);
+    outline: none;
+}
+
+.modal h3{
+    margin-bottom: 18px;
+}
+
+.modal button{
+    border: none;
+    background-color: unset;
+    cursor: pointer;
+}
+
+.modal button:hover{
+    text-decoration: underline;
+}
+
+.modal img{
+    cursor: pointer;
+}
+
+/* .modal img.gold, img.selected-rating{
+    content: url(images/star_gold.svg);
+} */
+
+.radio{
+    margin-top: 18px;
+    margin-bottom: 24px;
+    margin-right: 12px;
+    cursor: pointer;
+}
+.modal div:last-child{
+    display: flex;
+    justify-content: end;
+}
+
+.star-container{
+    height: min-content;
+    width: 180px;
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
+.star.gold ~ img{
+    content: url(images/star.svg);
+}
+
+.star.no-rating {
+    content: url(images/star.svg);
 }
