--- a/style.css
+++ b/style.css
@@ -209,7 +209,7 @@ footer{
     box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.22);
 }
 
-.card:last-of-type{
+/* .card:last-of-type{
     justify-self: start;
 }
 .card:first-of-type{
@@ -217,7 +217,7 @@ footer{
 }
 .card:only-of-type{
     justify-self: center;
-}
+} */
 
 
 /* .card:hover{
