--- a/style.css
+++ b/style.css
@@ -283,24 +283,12 @@ footer{
     width: 350px;
     background-color: white;
     border-radius: 18px;
-    box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+    box-shadow: 0px 6px 6px rgba(0, 0, 0, 0.2);
     display: flex;
     flex-direction: column;
     padding: 28px;
     z-index: 10;
-    /* gap: 18px; */
 }
-
-/* .modal::after{
-    content: "test";
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    z-index: 1;
-    background-color: rgba(255, 0, 0, 0.271);
-} */
 
 .modal>input{
     border-top: none;
@@ -338,13 +326,17 @@ footer{
     cursor: pointer;
 }
 
+.modal .star-container{
+    margin-top: 12px;
+    margin-bottom: 24px;
+}
+
 /* .modal img.gold, img.selected-rating{
     content: url(images/star_gold.svg);
 } */
 
-.radio{
-    margin-top: 18px;
-    margin-bottom: 24px;
+.checkbox{
+    margin-bottom: 42px;
     margin-right: 12px;
     cursor: pointer;
 }
