--- a/style.css
+++ b/style.css
@@ -192,6 +192,16 @@ footer{
 
 .check-mark{
     margin-left: auto;
+    width: 32px;
+    height: 32px;
+    background-image: url(images/check_gray.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    cursor: pointer;
+}
+
+.check-mark.checked{
+    background-image: url(images/check_green.svg);
 }
 
 .card img{
